# diag-tui

./: .gitignore  AGENTS.md  CMakeLists.txt  README.cn.md  README.md  package-lock.json  package.json  tsconfig.json  tui-test.config.ts
config/: did_database.json  dtc_database.json
src/: main.cpp
src/app/: App.cpp  App.h
src/doip/: DoipClient.cpp  DoipClient.h  DoipTypes.h
src/uds/: DidDatabase.cpp  DidDatabase.h  DtcDatabase.cpp  DtcDatabase.h  UdsClient.cpp  UdsClient.h  UdsMessage.cpp  UdsMessage.h  UdsTypes.h
src/ui/: DidItem.cpp  DidItem.h  DidPage.cpp  DidPage.h  DtcPage.cpp  DtcPage.h  NavBar.cpp  NavBar.h  RawPage.cpp  RawPage.h  SessionManager.cpp  SessionManager.h  SettingsPage.cpp  SettingsPage.h  StatusBar.cpp  StatusBar.h
src/ui/did/: DidBrowserPanel.cpp  DidBrowserPanel.h  DidPage.cpp  DidPage.h  DidPollingBar.cpp  DidPollingBar.h
src/ui/dtc/: DtcListPanel.cpp  DtcListPanel.h  DtcMaskFilter.cpp  DtcMaskFilter.h  DtcPage.cpp  DtcPage.h  DtcSnapshotPanel.cpp  DtcSnapshotPanel.h
src/ui/settings/: ConnectionPanel.cpp  ConnectionPanel.h  EcuDiscoveryPanel.cpp  EcuDiscoveryPanel.h  SettingsPage.cpp  SettingsPage.h
tests/: CMakeLists.txt  test_doip.cpp  test_uds.cpp
tests/e2e/: did.spec.ts  dtc-snapshots.spec.ts  dtc.spec.ts  navigation.spec.ts  test-server.ts
tools/: test_server.cpp
